<resources>
    <string name="app_name">DedeKost</string>
    <string name="change_language_settings">Ubah Pengaturan Bahasa</string>
    <string name="category">Jenis Kos</string>
    <string name="nama">Nama Kost</string>
    <string name="address">Alamat</string>
    <string name="telephone">Nomor Telepon</string>
    <string name="price">Harga Sewa</string>
    <string name="save">Simpan</string>
    <string name="update">Update</string>
    <string name="informasi">Aplikasi ini berisi daftar Kost yang ada di daerah Tembalang</string>
    <string name="owner">Created By : Adinda Reza Busyra Nur Hamida</string>
    <string name="version">Version : 1.2</string>
    <string name="email">Email : dedekost@gmail.com </string>

</resources>
